portfolio photo zoom update.

--- a/portfolio.html
+++ b/portfolio.html
@@ -186,7 +186,7 @@
                         <img src="./portfolio/portfolio-resources/portfolio-images/ar-counselling.png" alt="Ingredients Calculator" class="project-img">
                     </div>
 
-                    <div class="project-container">
+                    <!-- <div class="project-container">
                         <div class="project-text">
                             <h4 class="project-title title-font center">Ingredients Calculator</h4>
 
@@ -203,7 +203,7 @@
                             <p class="web-text"><a href="https://github.com/jameswaterman/ingredients-calculator" target="_blank">GitHub</a></p>
                         </div>
                         <img src="./portfolio/portfolio-resources/portfolio-images/ingredients-calculator.png" alt="Ingredients Calculator" class="project-img">
-                    </div>
+                    </div> -->
                     
                     <!-- <div class="project-container bg-color">
                         <div class="project-text">
@@ -224,13 +224,13 @@
                         <img src="./portfolio/portfolio-resources/portfolio-images/jamming.png" alt="Business website template" class="project-img">
                     </div> -->
 
-                    <div class="project-container bg-color">
+                    <!-- <div class="project-container bg-color">
                         <div class="project-text">
                             <h4 class="project-title title-font center">Business Website Template</h4>
                             <p class="web-text">I built this fully responsive <a href="http://businesswebsitetemplate.surge.sh/" target="_blank">buisness website template</a> using primarily HTML and CSS, as well as JavaScript for the animation of the navigation. Throttling has been used to control how often functions attached to a scroll event are being executed to help improve performance. <a href="https://github.com/jameswaterman/business-website-template" target="_blank">GitHub</a></p>
                         </div>
                         <img src="./portfolio/portfolio-resources/portfolio-images/business-template.png" alt="Business website template" class="project-img">
-                    </div>
+                    </div> -->
 
 
                   <!--   <div class="project-container bg-color">
