--- a/portfolio/cars.html
+++ b/portfolio/cars.html
@@ -11,6 +11,10 @@
 
 <body>
 
+    <div id="enlarged-photo-bg-id" class="enlarged-photo-background" onclick="enlargePhoto(this)">
+        <img src="" id="bigImage" class="enlarged-photo" loading="lazy">
+    </div>
+
 
     <!--  Banner  -->
 
@@ -44,26 +48,26 @@
     <section class="body-album center">
         <div class="album-photo-container">
             <div class="row">
-                <img src="./portfolio-album-images/cars/car1.jpg" alt="Picture of car." loading="lazy">        
-                <img src="./portfolio-album-images/cars/car2.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car8.jpg" alt="Picture of car." loading="lazy"> 
-                <img src="./portfolio-album-images/cars/car3.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car1.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">        
+                <img src="./portfolio-album-images/cars/car2.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car8.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)"> 
+                <img src="./portfolio-album-images/cars/car3.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/cars/car5.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car4.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car12.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car7.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car5.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car4.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car12.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car7.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/cars/car13.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car10.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car11.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car13.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car10.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car11.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
             </div> 
             <div class="row"> 
-                <img src="./portfolio-album-images/cars/car9.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car6.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car14.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car9.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car6.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/cars/car14.jpg" alt="Picture of car." loading="lazy" onclick="enlargePhoto(this)">
             </div>    
         </div>
     </section>
