--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -11,6 +11,10 @@
 
 <body>
 
+    <div id="enlarged-photo-bg-id" class="enlarged-photo-background" onclick="enlargePhoto(this)">
+        <img src="" id="bigImage" class="enlarged-photo" loading="lazy">
+    </div>
+
 
     <!--  Banner  -->
 
@@ -43,32 +47,32 @@
     <div class="body-album center">
         <div class="album-photo-container">
             <div class="row">
-                <img src="./portfolio-album-images/hospitality/hospitality3.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality17.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality1.jpg" alt="Picture of drinks on a bar." loading="lazy"> 
-                <img src="./portfolio-album-images/hospitality/hospitality15.jpg" alt="Picture of drinks on a bar." loading="lazy">      
-                <img src="./portfolio-album-images/hospitality/hospitality2.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality3.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality17.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality1.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)"> 
+                <img src="./portfolio-album-images/hospitality/hospitality15.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">      
+                <img src="./portfolio-album-images/hospitality/hospitality2.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/hospitality/hospitality10.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality18.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality5.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality20.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality6.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality10.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality18.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality5.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality20.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality6.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/hospitality/hospitality7.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality19.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality9.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality13.jpg" alt="Picture of drinks on a bar." loading="lazy"> 
-                <img src="./portfolio-album-images/hospitality/hospitality11.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality7.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality19.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality9.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality13.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)"> 
+                <img src="./portfolio-album-images/hospitality/hospitality11.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
             </div>   
             <div class="row"> 
-                <img src="./portfolio-album-images/hospitality/hospitality21.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality4.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality12.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality16.jpg" alt="Picture of drinks on a bar." loading="lazy">
-                <img src="./portfolio-album-images/hospitality/hospitality8.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality21.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality4.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality12.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality16.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/hospitality/hospitality8.jpg" alt="Picture of drinks on a bar." loading="lazy" onclick="enlargePhoto(this)">
             </div>    
         </div>
     </div>
