--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -11,6 +11,10 @@
 
 <body>
 
+    <div id="enlarged-photo-bg-id" class="enlarged-photo-background" onclick="enlargePhoto(this)">
+        <img src="" id="bigImage" class="enlarged-photo" loading="lazy">
+    </div>
+
 
     <!--  Banner  -->
 
@@ -45,47 +49,45 @@
     <div class="body-album center">
         <div class="album-photo-container">
             <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape11.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape24.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape25.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape16.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape17.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape11.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape24.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape25.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape16.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape17.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape22.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape18.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape12.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape19.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape22.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape18.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape12.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape19.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)" onclick="enlargePhoto(this)">
             </div> 
             <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape2.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape1.jpg" alt="Picture of a Landscape." loading="lazy">        
-                <img src="./portfolio-album-images/landscape/landscape21.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape27.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape4.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape20.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape14.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape3.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape2.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape1.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">        
+                <img src="./portfolio-album-images/landscape/landscape21.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape27.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape4.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape20.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape14.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape3.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape23.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape26.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape7.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape5.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape28.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape23.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape26.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape7.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape5.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/landscape/landscape28.jpg" alt="Picture of a Landscape." loading="lazy" onclick="enlargePhoto(this)">
             </div>        
         </div>
     </div>
 
     <a href="#top" class="back_to_top center">Back to top</a>
-
-
 
     <footer id="portfolioFooter" class="footer">
      
