--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -11,6 +11,10 @@
 
 <body>
 
+    <div id="enlarged-photo-bg-id" class="enlarged-photo-background" onclick="enlargePhoto(this)">
+        <img src="" id="bigImage" class="enlarged-photo" loading="lazy">
+    </div>
+
 
     <!--  Banner  -->
 
@@ -43,36 +47,36 @@
     <div class="body-album center">
         <div class="album-photo-container">
             <div class="row">
-                <img src="./portfolio-album-images/pets/pets1.jpg" alt="Picture of some owls." loading="lazy">        
-                <img src="./portfolio-album-images/pets/pets2.jpg" alt="Picture of a pony." loading="lazy">
-                <img src="./portfolio-album-images/pets/pets3.jpg" alt="Picture of a bird." loading="lazy">
-                <img src="./portfolio-album-images/pets/pets19.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets11.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets20.jpg" alt="Picture of a dog" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets1.jpg" alt="Picture of some owls." loading="lazy" onclick="enlargePhoto(this)">        
+                <img src="./portfolio-album-images/pets/pets2.jpg" alt="Picture of a pony." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets3.jpg" alt="Picture of a bird." loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets20.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets16.jpg" alt="Picture of a deer" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets11.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/pets/pets18.jpg" alt="Picture of a deer" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets6.jpg" alt="Picture of a deer" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets17.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets21.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets12.jpg" alt="Picture of a cat" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets5.jpg" alt="Picture of a bird" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets8.jpg" alt="Picture of a cat" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets18.jpg" alt="Picture of a deer" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets6.jpg" alt="Picture of a deer" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets17.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets12.jpg" alt="Picture of a cat" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets5.jpg" alt="Picture of a bird" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets21.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets8.jpg" alt="Picture of a cat" loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/pets/pets22.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets10.jpg" alt="Picture of a flower" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets4.jpg" alt="Picture of a pony" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets16.jpg" alt="Picture of a deer" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets24.jpg" alt="Picture of a deer" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets22.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets10.jpg" alt="Picture of a flower" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets4.jpg" alt="Picture of a pony" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets19.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets24.jpg" alt="Picture of a deer" loading="lazy" onclick="enlargePhoto(this)">
             </div>
             <div class="row">
-                <img src="./portfolio-album-images/pets/pets13.jpg" alt="Picture of a dog" loading="lazy"> 
-                <img src="./portfolio-album-images/pets/pets14.jpg" alt="Picture of a bird" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets15.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets9.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets23.jpg" alt="Picture of a dog" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets13.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)"> 
+                <img src="./portfolio-album-images/pets/pets14.jpg" alt="Picture of a bird" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets15.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets9.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets23.jpg" alt="Picture of a dog" loading="lazy" onclick="enlargePhoto(this)">
+                <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy" onclick="enlargePhoto(this)">
             </div>       
         </div>
     </div>
